manifests/harbor/ocf-harbor-ingress_Ingress_harbor.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/force-ssl-redirect: 'true'
    ingress.kubernetes.io/proxy-body-size: '0'
    ingress.kubernetes.io/ssl-redirect: 'true'
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  labels:
    app.kubernetes.io/instance: ocf-harbor
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: harbor
    helm.sh/chart: harbor-10.0.4
  name: ocf-harbor-ingress
spec:
  rules:
  - host: harbor.ocf.berkeley.edu
    http:
      paths:
      - backend:
          service:
            name: ocf-harbor-portal
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
      - backend:
          service:
            name: ocf-harbor-core
            port:
              name: http
        path: /api
        pathType: ImplementationSpecific
      - backend:
          service:
            name: ocf-harbor-core
            port:
              name: http
        path: /service
        pathType: ImplementationSpecific
      - backend:
          service:
            name: ocf-harbor-core
            port:
              name: http
        path: /v2
        pathType: ImplementationSpecific
      - backend:
          service:
            name: ocf-harbor-core
            port:
              name: http
        path: /chartrepo
        pathType: ImplementationSpecific
      - backend:
          service:
            name: ocf-harbor-core
            port:
              name: http
        path: /c
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - harbor.ocf.berkeley.edu
    secretName: harbor-tls
